[tool.black]
exclude = "migrations/"


[tool.isort]
# Match what Black will do:
multi_line_output = 3
line_length = 88

skip = [
    "migrations",
    "node_modules",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"

testpaths = [
    "CreeDictionary"
]

env = [
    "USE_TEST_DB=true"
]

# pytest-django
DJANGO_SETTINGS_MODULE = "CreeDictionary.settings"


[project_paths]
# A place to store paths to different components in our project.
# Here they are all written relative to project root.
# we have get_project_path function in CreeDictionary.utils.project_path
# module that resolves to these paths
# TODO: use `pip install project-paths` (requires Python 3.8+)

# the file we write documentation for directories
dir_doc_file = "docs/directory-structure.md"
